Removed extra spaces to improve automatic translation

--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -447,20 +447,20 @@ MODE_BLIND_DESC=A 1v1 duel, but with the notes hidden!
 MODE_BLINDTOTAL_NAME=Total Darkness!
 MODE_BLINDTOTAL_DESC=A duel, but with the notes and the lyrics hidden. Only for the brave!
 
-MODE_1000BLIND_NAME = +1000 Blind
-MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
+MODE_1000BLIND_NAME=+1000 Blind
+MODE_1000BLIND_DESC=Gain a lead of more than 1000 points, but without seeing the notes!
 
-MODE_DEAF_NAME = Deaf
-MODE_DEAF_DESC = Think you know the notes? Can you sing it without the acompaniment?
+MODE_DEAF_NAME=Deaf
+MODE_DEAF_DESC=Think you know the notes? Can you sing it without the acompaniment?
 
-MODE_BLINDLYRICS_NAME = No Lyrics
-MODE_BLINDLYRICS_DESC = Think you know all the lyrics? Sing with the lyrics hidden!
+MODE_BLINDLYRICS_NAME=No Lyrics
+MODE_BLINDLYRICS_DESC=Think you know all the lyrics? Sing with the lyrics hidden!
 
-MODE_500BLIND_NAME = +500 Blind
-MODE_500BLIND_DESC = Gain a lead of more than 500 points, but without seeing the notes!
+MODE_500BLIND_NAME=+500 Blind
+MODE_500BLIND_DESC=Gain a lead of more than 500 points, but without seeing the notes!
 
-MODE_SHORTSONG_NAME = Short Song
-MODE_SHORTSONG_DESC = A fast-paced 1v1 duel over half the song!
+MODE_SHORTSONG_NAME=Short Song
+MODE_SHORTSONG_DESC=A fast-paced 1v1 duel over half the song!
 
 MODE_HARDCORE_NAME=Hardcore
 MODE_HARDCORE_DESC=Battle for a three-line lead on your opponent!
