--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -666,7 +666,7 @@ C_SONGS=Chansons
 C_SORT=Trier
 C_SORT_SONGS=Trier les chansons
 C_SOUND=Audio
-;TODO: C_STATISTICS=Statistics
+C_STATISTICS=Statistiques
 C_STATS=Statistiques
 
 C_THEME=Thème
