--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -448,19 +448,19 @@ MODE_BLIND_NAME=Blinde Mode
 ;TODO: MODE_BLINDTOTAL_DESC=A duel, but with the notes and the lyrics hidden. Only for the brave!
 
 MODE_1000BLIND_NAME= +1000 Blind
-;TODO: MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
+;TODO: MODE_1000BLIND_DESC=Gain a lead of more than 1000 points, but without seeing the notes!
 
 MODE_DEAF_NAME= Doof
-;TODO: MODE_DEAF_DESC = Think you know the notes? Can you sing it without the acompaniment?
+;TODO: MODE_DEAF_DESC=Think you know the notes? Can you sing it without the acompaniment?
 
-;TODO: MODE_BLINDLYRICS_NAME = No Lyrics
-;TODO: MODE_BLINDLYRICS_DESC = Think you know all the lyrics? Sing with the lyrics hidden!
+;TODO: MODE_BLINDLYRICS_NAME=No Lyrics
+;TODO: MODE_BLINDLYRICS_DESC=Think you know all the lyrics? Sing with the lyrics hidden!
 
 MODE_500BLIND_NAME= +500 Blind
-;TODO: MODE_500BLIND_DESC = Gain a lead of more than 500 points, but without seeing the notes!
+;TODO: MODE_500BLIND_DESC=Gain a lead of more than 500 points, but without seeing the notes!
 
-;TODO: MODE_SHORTSONG_NAME = Short Song
-;TODO: MODE_SHORTSONG_DESC = A fast-paced 1v1 duel over half the song!
+;TODO: MODE_SHORTSONG_NAME=Short Song
+;TODO: MODE_SHORTSONG_DESC=A fast-paced 1v1 duel over half the song!
 
 ;TODO: MODE_HARDCORE_NAME=Hardcore
 ;TODO: MODE_HARDCORE_DESC=Battle for a three-line lead on your opponent!
