--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -459,7 +459,7 @@ MODE_BLINDLYRICS_DESC= Myślisz że znasz tekst? Zaśpiewaj bez patrzenia na nap
 MODE_500BLIND_NAME= +500 Ślepy
 MODE_500BLIND_DESC= Uzbieraj ponad 500 punktów, ale z ukrytymi nutami!
 
-;TODO: MODE_SHORTSONG_NAME = Short Song
+;TODO: MODE_SHORTSONG_NAME=Short Song
 MODE_SHORTSONG_DESC= Szybki pojedynek 1v1 do połowy piosenki!
 
 ;TODO: MODE_HARDCORE_NAME=Hardcore
