Added Estonian and updated Catalonian and German

--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -246,8 +246,8 @@ JUKEBOX_SONGOPTIONS_LYRIC=Lyricsoptionen
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Singen
-;TODO: OPTION_VALUE_TOP=Top
-;TODO: OPTION_VALUE_BOTTOM=Bottom
+OPTION_VALUE_TOP=Oben
+OPTION_VALUE_BOTTOM=Unten
 OPTION_VALUE_OTHER=Other
 OPTION_VALUE_FILL=Füllung
 OPTION_VALUE_OUTLINE=Umriss
@@ -264,11 +264,6 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Songs
 PLAYLIST_CATTEXT=Playlist: %s
-SING_SONG_SELECTION_LEGEND_TITLE=Legende
-SING_SONG_SELECTION_LEGEND_VIDEO=Video
-SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley berechnet
-SING_SONG_SELECTION_LEGEND_DUET=Duett
 
 SING_TOTAL=Gesamt
 SING_MODE=Singmodus
@@ -341,13 +336,13 @@ SONG_MENU_NAME_PARTY_JOKER=Joker einsetzen
 
 SONG_MENU_LEGEND_TITLE=Legende
 SONG_MENU_LEGEND_VIDEO=Video
-;TODO: SONG_MENU_LEGEND_MEDLEY=Medley
-;TODO: SONG_MENU_LEGEND_MEDLEYC=Medley calculated
+SONG_MENU_LEGEND_MEDLEY=Medley
+SONG_MENU_LEGEND_MEDLEYC=Medley berechnet
 SONG_MENU_LEGEND_DUET=Duett
-;TODO: SONG_MENU_LEGEND_RAP=Rap
-;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
-;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
-;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+SONG_MENU_LEGEND_RAP=Rap
+SONG_MENU_LEGEND_CREATEDBY=Erstellt von
+SONG_MENU_LEGEND_FIXEDBY=Korrigiert von
+SONG_MENU_LEGEND_UNVALIDATED=Unbestätigt
 
 SONG_MENU_SONG=Song
 SONG_MENU_MEDLEY=Medley
@@ -355,7 +350,7 @@ SONG_MENU_MEDLEY=Medley
 SONG_MENU_NAME_SONG=Song Menü
 SONG_MENU_NAME_MEDLEY=Medley Menü
 SONG_MENU_ADD_SONG=Song hinzufügen
-;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
+SONG_MENU_ADD_SONG_TO_LIST=Lied zur Liste hinzufügen
 SONG_MENU_DELETE_SONG=Song löschen
 SONG_MENU_START_MEDLEY=Singen!
 SONG_MENU_START_5_MEDLEY=%0:d Songs singen!
@@ -533,7 +528,7 @@ PARTY_MODE_JUKEBOX_NO_SONGS=Playlist ist leer!
 WEBSITE_EXIST_SONG=Dieser Song ist der folgenden Webseite zugeordnet: %0:s
 WEBSITE_NOT_EXIST_SONG=Dieser Song ist keiner Webseite zugeordnet!
 
-;TODO: SING_SONGS_MYSCORES=My scores
+SING_SONGS_MYSCORES=Meine Ergebnisse
 
 NAME_PLAYERS_COUNT=Anzahl der Spieler
 NAME_CURRENT_PLAYER=Spieler
@@ -571,20 +566,22 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song konnte nicht geladen werden: Fehler beim
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Mehrere Mikrofone für Spieler %d gewählt.\nÜberprüfen Sie Ihre Mikrofonoptionen.
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Kein Mikrofon für Spieler %d gewählt.\nÜberprüfen Sie Ihre Mikrofonoptionen.
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
 
-;TODO: C_ABOUT=About...
+C_ABOUT=Über...
 C_ADVANCED=Erweitert
-;TODO: C_ALL=All
-;TODO: C_APPLY_CHANGES=Apply changes
+C_ALL=Alle
+C_APPLY_CHANGES=Änderungen übernehmen
 
 C_BACK=Zurück
-;TODO: C_BOTTOM=Bottom
+C_BOTTOM=Unten
 
-;TODO: C_CLASSIC=Classic
-;TODO: C_CHALLENGE=Challenge
-;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
+C_CLASSIC=Klassisch
+C_CHALLENGE=Herausforderung
+C_COLOR_BEIGE=Beige
+C_COLOR_BLACK=Schwarz
 C_COLOR_BLUE=Blau
 C_COLOR_BROWN=Braun
 C_COLOR_CYAN=Cyan
@@ -600,7 +597,7 @@ C_COLOR_LAVENDER=Lavendel
 C_COLOR_MAGENTA=Magenta
 C_COLOR_ORANGE=Orange
 C_COLOR_ORCHID=Orchidee
-;TODO: C_COLOR_OTHER=Other
+C_COLOR_OTHER=Andere
 C_COLOR_PINK=Rosa
 C_COLOR_PLUM=Pflaume
 C_COLOR_RED=Rot
@@ -612,76 +609,76 @@ C_COLOR_TURQUOISE=Türkis
 C_COLOR_VIOLET=Violett
 C_COLOR_WHITE=Weiß
 C_COLOR_YELLOW=Gelb
-;TODO: C_CONTINUE=Continue
-;TODO: C_CREATEDBY=Created by
+C_CONTINUE=Fortsetzen
+C_CREATEDBY=Erstellt von
 
-;TODO: C_DUET=Duet
-;TODO: C_DUETS=Duets
+C_DUET=Duett
+C_DUETS=Duette
 
-;TODO: C_ERROR=Error
+C_ERROR=Fehler
 
-;TODO: C_FIND=Find
-;TODO: C_FIXEDBY=Fixed by
-;TODO: C_FOLDERS=Folders
+C_FIND=Finden
+C_FIXEDBY=Korrigiert von
+C_FOLDERS=Ordner
 
 C_GAME=Spiel
 C_GRAPHICS=Grafik
 
-;TODO: C_INFORMATION=Information
+C_INFORMATION=Information
 C_INTERNET=Internet
 
-;TODO: C_JOKER=Joker
-;TODO: C_JUKEBOX=Jukebox
+C_JOKER=Joker
+C_JUKEBOX=Jukebox
 
-;TODO: C_LEGEND=Legend
-;TODO: C_LINE=Line
+C_LEGEND=Legende
+C_LINE=Linie
 C_LYRICS=Lyrics
 
-;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley calcultated
+C_MEDLEY=Medley
+C_MEDLEYC=Medley berechnet
 C_MICROPHONES=Mikrofone
-;TODO: C_MODE=Mode
+C_MODE=Modus
 
-;TODO: C_NEXT=Next
-;TODO: C_NO=No
-;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+C_NEXT=Nächste
+C_NO=Nein
+C_NO_INTERNET_CONNECTION=Keine Internetverbindung
 
-;TODO: C_OPEN_PLAYLIST=Open playlist
-;TODO: C_OPTIONS=Options
+C_OPEN_PLAYLIST=Wiedergabeliste öffnen
+C_OPTIONS=Optionen
 
-;TODO: C_PLAYERS=Players
-;TODO: C_PLAYLIST=Playlist
-;TODO: C_PROFILES=Profiles
+C_PLAYERS=Spieler
+C_PLAYLIST=Wiedergabeliste
+C_PROFILES=Profile
 
-;TODO: C_QUIT=Quit
+C_QUIT=Verlassen
 
-;TODO: C_RANDOM=Random
-;TODO: C_RAP=Rap
-;TODO: C_REFRESH_SCORES=Refresh scores
-;TODO: C_REPEAT=Repeat
+C_RANDOM=Zufällig
+C_RAP=Rap
+C_REFRESH_SCORES=Ergebnisse aktualisieren
+C_REPEAT=Wiederholen
 
-;TODO: C_SAVE=Save
-;TODO: C_SEARCH_NEW_SONGS=Search for new songs
-;TODO: C_SELECT_THIS_SONG=Select this song
-;TODO: C_SEND=Send
-;TODO: C_SING=Sing
-;TODO: C_SING_MEDLEY=Sing medley
-;TODO: C_SONG=Song
-;TODO: C_SONGS=Songs
-;TODO: C_SORT=Sort
-;TODO: C_SORT_SONGS=Sort songs
+C_SAVE=Speichern
+C_SEARCH_NEW_SONGS=Nach neuen Liedern suchen
+C_SELECT_THIS_SONG=Dieses Lied auswählen
+C_SEND=Senden
+C_SING=Singen
+C_SING_MEDLEY=Medley singen
+C_SONG=Lied
+C_SONGS=Lieder
+C_SORT=Sortieren
+C_SORT_SONGS=Lieder sortieren
 C_SOUND=Sound
-;TODO: C_STATISTICS=Statistics
-;TODO: C_STATS=Stats
+C_STATISTICS=Statistiken
+C_STATS=Stat
 
-;TODO: C_THEME=Theme
+C_THEME=Theme
 C_THEMES=Design
-;TODO: C_TOP=Top
+C_TOP=Oben
 
-;TODO: C_UNVALIDATED=Unvalidated
+C_UNVALIDATED=Unbestätigt
 
-;TODO: C_VIDEO=Video
+C_VIDEO=Video
 
 C_WEBCAM=Webcam
 
-;TODO: C_YES=Yes
+C_YES=Ja
