Update Slovak translation

--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -9,7 +9,7 @@ SING_SING=Hra
 SING_SING_DESC=Sólo alebo duet
 
 SING_MULTI=Párty
-SING_MULTI_DESC=Párty-mód
+SING_MULTI_DESC=Párty režim
 
 SING_JUKEBOX=Jukebox
 SING_JUKEBOX_DESC=Vypočujte si moju zbierku skladieb
@@ -63,14 +63,14 @@ OPTION_VALUE_EDITION=Vydanie
 OPTION_VALUE_GENRE=Štýl
 OPTION_VALUE_LANGUAGE=Jazyk
 OPTION_VALUE_FOLDER=Kategória
-OPTION_VALUE_TITLE=V názve skladby
-OPTION_VALUE_ARTIST=V mene autora
-OPTION_VALUE_ARTIST2=V mene autora2
+OPTION_VALUE_TITLE=Názov skladby
+OPTION_VALUE_ARTIST=Meno autora
+OPTION_VALUE_ARTIST2=Meno autora2
 OPTION_VALUE_YEAR=Rok
 OPTION_VALUE_DECADE=Desaťročia
 OPTION_VALUE_PLAYLIST=Playlist
 
-;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
+OPTION_VALUE_WHEN_EXISTS=Ak existuje
 
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Celá obrazovka
 SING_OPTIONS_GRAPHICS_RESOLUTION=Rozlíšenie
@@ -125,8 +125,8 @@ SING_OPTIONS_THEMES_COLOR=Farba
 SING_OPTIONS_MICROPHONES_CARD=Zvuková karta
 SING_OPTIONS_MICROPHONES_INPUT=Vstup
 SING_OPTIONS_MICROPHONES_CHANNEL=Kanál
-SING_OPTIONS_MICROPHONES_THRESHOLD=Prah počuteľ.
-SING_OPTIONS_MICROPHONES_MIC_BOOST=Zosilnenie mikrof.
+SING_OPTIONS_MICROPHONES_THRESHOLD=Prah počuteľnosti
+SING_OPTIONS_MICROPHONES_MIC_BOOST=Zosilnenie mikrofónu
 
 SING_OPTIONS_ADVANCED_DEBUG=Režim ladenia
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloskop
@@ -138,20 +138,20 @@ SING_OPTIONS_ADVANCED_TOPSCORES=Top skóre
 OPTION_VALUE_ALL=Všade
 OPTION_VALUE_PLAYER=Hráč
 
-;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Press key "Insert" to add user to this web...
-;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
-SING_OPTIONS_NETWORK_USERNAME=Užívateľské meno
+SING_OPTIONS_NETWORK_INSERT_USER_INFO=Stlačte kláves "Insert" pre pridanie používateľa na tento web...
+SING_OPTIONS_NETWORK_WEBSITE=Webová stránka
+SING_OPTIONS_NETWORK_USERNAME=Meno používateľa
 SING_OPTIONS_NETWORK_PASSWORD=Heslo
-;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send name
-;TODO: SING_OPTIONS_NETWORK_AUTO_MODE=Auto
-;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER=Player
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-send (easy)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-send (medium)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-send (hard)
+SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Odoslať meno
+SING_OPTIONS_NETWORK_AUTO_MODE=Automaticky
+SING_OPTIONS_NETWORK_AUTO_PLAYER=Hráč
+SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-odoslanie (ľahké)
+SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-odoslanie (stredné)
+SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-odoslanie (ťažké)
 SING_OPTIONS_NETWORK_NO_DLL=Nebol nájdený žiaden kompatibilný modul leaderboard!
-;TODO: SING_OPTIONS_NETWORK_DELETE_PLAYER=Really delete the user %0:s of the website %1:s?
-;TODO: SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
-SING_OPTIONS_NETWORK_LEGEND_DELETE=Vymazať
+SING_OPTIONS_NETWORK_DELETE_PLAYER=Naozaj odstrániť používateľa %0:s z webovej stránky %1:s?
+SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
+SING_OPTIONS_NETWORK_LEGEND_DELETE=Odstrániť
 
 OPTION_PLAYER_1=Hráč 1
 OPTION_PLAYER_2=Hráč 2
@@ -164,33 +164,33 @@ OPTION_ALL_SCORES=Všetky skóre
 OPTION_VALUE_SAVE=Uložiť
 OPTION_VALUE_SEND=Odoslať
 
-;TODO: MSG_INSERT_USER_TITLE=%0:s
-;TODO: MSG_INSERT_USER_DESC=Fill the fields:
-;TODO: MSG_INSERT_USER_ADD=Add
+MSG_INSERT_USER_TITLE=%0:s
+MSG_INSERT_USER_DESC=Vyplňte polia:
+MSG_INSERT_USER_ADD=Pridať
 MSG_INSERT_USER_CANCEL=Zrušiť
 
-;TODO: WEBSITE_NO_CONNECTION=No website connection!
-;TODO: WEBSITE_LOGIN_ERROR=Login Incorrect!
-;TODO: WEBSITE_BLANK_LOGIN=There are blank fields!
-;TODO: WEBSITE_EXIST_USER=Existing user!
-;TODO: WEBSITE_ERROR_SCORE=Scoring error!
-;TODO: WEBSITE_OK_SEND=Score sent successfully!
-;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing score!
-;TODO: WEBSITE_ERROR_SONG=Song not found!
-;TODO: WEBSITE_SAVE_SCORE=Score save successfully!
-;TODO: WEBSITE_NO_CONNECTION_SAVE=No website connection! Save user anyway?
+WEBSITE_NO_CONNECTION=Nedá sa pripojiť k webovej stránke!
+WEBSITE_LOGIN_ERROR=Chyba prihlásenia!
+WEBSITE_BLANK_LOGIN=Niektoré polia nie sú vyplnené!
+WEBSITE_EXIST_USER=Používateľ už existuje!
+WEBSITE_ERROR_SCORE=Chyba skórovania!
+WEBSITE_OK_SEND=Skóre úspešne odoslané!
+WEBSITE_ERROR_SCORE_DUPLICATED=Existujúce skóre!
+WEBSITE_ERROR_SONG=Skladba nebola nájdená!
+WEBSITE_SAVE_SCORE=Skóre bolo úspešne uložené!
+WEBSITE_NO_CONNECTION_SAVE=Nedá sa pripojit k webovej stránke! Uložiť používateľa aj tak?
 
 SONG_MENU_REFRESH_SCORES=Aktualizovať skóre
-;TODO: SONG_MENU_REFRESH_SCORES_TITLE=Update
+SONG_MENU_REFRESH_SCORES_TITLE=Aktualizovať
 SONG_MENU_REFRESH_SCORES_NO_WEB=Neexistujú webové stránky!
-;TODO: SONG_MENU_REFRESH_SCORES_ONLINE=Online
-;TODO: SONG_MENU_REFRESH_SCORES_FILE=File
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All websites
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All songs
-;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This song
-;TODO: SONG_MENU_REFRESH_SCORES_REFRESH=Update
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [download scores]'!
+SONG_MENU_REFRESH_SCORES_ONLINE=Online
+SONG_MENU_REFRESH_SCORES_FILE=Súbor
+SONG_MENU_REFRESH_SCORES_ALL_WEB=Všetky webové stránky
+SONG_MENU_REFRESH_SCORES_ALL_SONGS=Všetky skladby
+SONG_MENU_REFRESH_SCORES_ONLY_SONG=Táto skladba
+SONG_MENU_REFRESH_SCORES_REFRESH=Aktualizovať
+SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Chyba pri pripájaní k webovej stránke: %0:s!
+SONG_MENU_REFRESH_SCORES_ERROR_FILE=Súbor nenájdený: '%0:s [stiahnuť skóre]'!
 
 SONG_SCORE_MAX=Najlepší:
 SONG_SCORE_MEDIA=Priemerne:
@@ -198,16 +198,16 @@ SONG_SCORE_MEDIA=Priemerne:
 SCORE_SEND_DESC=Odoslať skóre
 SCORE_SEND=Odoslať
 SCORE_SEND_PLAYER=Hráč
-;TODO: SCORE_SEND_OTHER_USER= Other username
-;TODO: SCORE_SAVE=Save
+SCORE_SEND_OTHER_USER= Meno druhého používateľa
+SCORE_SAVE=Uložiť
 
 SCORE_DOWNLOAD_TITLE=Stiahnuť
 SCORE_DOWNLOAD_SONG=Skladba:
-;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing list...
-;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
+SCORE_DOWNLOAD_CREATE_LIST=Pripravujem zoznam...
+SCORE_DOWNLOAD_RECEIVE_LIST=Sťahujem...
 SCORE_DOWNLOAD_CANCEL=Zrušiť
 SCORE_DOWNLOAD_OK=OK
-;TODO: SCORE_DOWNLOAD_SONG_UPDATE=%0:d song(s) change(s) by web!
+SCORE_DOWNLOAD_SONG_UPDATE=%0:d zmena/zmien skladby(ieb) na webe!
 
 SING_OPTIONS_WEBCAM_ID=Webová kamera
 SING_OPTIONS_WEBCAM_RESOLUTION=Rozlíšenie
@@ -242,12 +242,12 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Červená
 JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Zelená
 JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Modrá
 
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
+JUKEBOX_SONGOPTIONS_LYRIC=Voľby textu
+JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Umiestnenie
 
 OPTION_VALUE_TO_SING=Spev
-;TODO: OPTION_VALUE_TOP=Top
-;TODO: OPTION_VALUE_BOTTOM=Bottom
+OPTION_VALUE_TOP=Hore
+OPTION_VALUE_BOTTOM=Dole
 OPTION_VALUE_OTHER=Ostatné
 OPTION_VALUE_FILL=Výplň
 OPTION_VALUE_OUTLINE=Obrysy
@@ -308,7 +308,7 @@ SONG_MENU_CHANGEPLAYERS=Iný hráč
 
 SONG_MENU_NAME_PLAYLIST=Skladby
 SONG_MENU_PLAYLIST_ADD=Pridať skladbu
-SONG_MENU_PLAYLIST_DEL=Vymazať skladbu
+SONG_MENU_PLAYLIST_DEL=Odstrániť skladbu
 
 SONG_MENU_NAME_PLAYLIST_ADD=Pridať skladbu
 SONG_MENU_PLAYLIST_ADD_NEW=Do nového playlistu
@@ -319,15 +319,15 @@ SONG_MENU_NAME_PLAYLIST_NEW=Nový playlist
 SONG_MENU_PLAYLIST_NEW_CREATE=Vytvoriť
 SONG_MENU_PLAYLIST_NEW_UNNAMED=Bez mena
 
-SONG_MENU_NAME_PLAYLIST_DELITEM=Skutočne zmazať?
+SONG_MENU_NAME_PLAYLIST_DELITEM=Skutočne odstrániť?
 SONG_MENU_YES=Áno
 SONG_MENU_NO=Nie
 
 SONG_MENU_NAME_PLAYLIST_LOAD=Načítať playlist
 SONG_MENU_PLAYLIST_LOAD=Načítať
-SONG_MENU_PLAYLIST_DELCURRENT=Zmazať tento playlist
+SONG_MENU_PLAYLIST_DELCURRENT=Odstrániť tento playlist
 
-SONG_MENU_NAME_PLAYLIST_DEL=Zmazať playlist?
+SONG_MENU_NAME_PLAYLIST_DEL=Odstrániť playlist?
 
 SONG_MENU_NAME_PARTY_MAIN=Party menu
 SONG_MENU_JOKER=Žolík
@@ -339,10 +339,10 @@ SONG_MENU_LEGEND_VIDEO=Video
 SONG_MENU_LEGEND_MEDLEY=Všehochuť
 SONG_MENU_LEGEND_MEDLEYC=Všehochuť (vypočítaná)
 SONG_MENU_LEGEND_DUET=Duet
-;TODO: SONG_MENU_LEGEND_RAP=Rap
-;TODO: SONG_MENU_LEGEND_CREATEDBY=Created by
-;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
-;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+SONG_MENU_LEGEND_RAP=Rap
+SONG_MENU_LEGEND_CREATEDBY=Vytvoril(a)
+SONG_MENU_LEGEND_FIXEDBY=Opravil(a)
+SONG_MENU_LEGEND_UNVALIDATED=Neskontrolované
 
 SONG_MENU_SONG=Skladba
 SONG_MENU_MEDLEY=Všehochuť
@@ -350,18 +350,18 @@ SONG_MENU_MEDLEY=Všehochuť
 SONG_MENU_NAME_SONG=Skladby
 SONG_MENU_NAME_MEDLEY=Ponuka všehochute
 SONG_MENU_ADD_SONG=Pridať skladbu
-;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
-SONG_MENU_DELETE_SONG=Zmazať skladbu
+SONG_MENU_ADD_SONG_TO_LIST=Pridať skladbu do zoznamu
+SONG_MENU_DELETE_SONG=Odstrániť skladbu
 SONG_MENU_START_MEDLEY=Spievajte!
 SONG_MENU_START_5_MEDLEY=Zaspievajte %0:d piesní!
 
 SONG_MENU_NAME_SORTING=Ponuka triedenia
 SONG_MENU_SORTING_APPLY=Použiť
 
-;TODO: SONG_MENU_OPEN_CATEGORY=Open category
-;TODO: SONG_MENU_CLOSE_CATEGORY=Close category
+SONG_MENU_OPEN_CATEGORY=Otvoriť kategóriu
+SONG_MENU_CLOSE_CATEGORY=Zatvoriť kategóriu
 
-;TODO: SONG_SEARCH_DESC=What do you want to sing now?
+SONG_SEARCH_DESC=Čo si chcete zaspievať teraz?
 
 PARTY_MODE=Párty mód
 PARTY_DIFFICULTY=Obtiažnosť
@@ -468,10 +468,10 @@ MODE_HARDCORE_DESC=Súboj o trojriadkový náskok pred súperom!
 STAT_MAIN=Štatistika
 
 STAT_OVERVIEW_INTRO=%0:s štatistika  \n Štatistika od %2:.2d.%1:.2d.%3:d
-STAT_OVERVIEW_SONG=SKLADBY \n Celkom: %0:d z toho %3:d s videom\n Počet už hraných: %1:d \n Počet nehraných: %2:d \n Najhranejšia skladba: %5:s od %4:s
+STAT_OVERVIEW_SONG=SKLADBY \n Celkom: %0:d, z toho %3:d s videom\n Počet už hraných: %1:d \n Počet nehraných: %2:d \n Najhranejšia skladba: %5:s od %4:s
 STAT_OVERVIEW_PLAYER=HRÁČI \n Celkom: %0:d rôznych hráčov.\n Najlepší hráč: %1:s (%2:d - priemer bodov)\n Najvyššie skóre: %3:s (%4:d bodov)
 
-;TODO: STAT_FORMAT_DATE=%1:.2d.%0:.2d.%2:d
+STAT_FORMAT_DATE=%1:.2d.%0:.2d.%2:d
 
 STAT_DETAIL=Štatistiky
 STAT_DETAIL_WHEREAMI=Podrobná štatistika
@@ -504,44 +504,44 @@ PARTY_MODE_CHALLENGE=Výzva
 PARTY_MODE_TOURNAMENT=Turnaj
 PARTY_MODE_JUKEBOX=Jukebox
 
-;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number and players name
-;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of players
-;TODO: PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Number of rounds
-;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Final
-;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_2FINAL=Semifinals
-;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_4FINAL=Quarterfinals
-;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_8FINAL=Round of 16
+PARTY_MODE_TOURNAMENT_PLAYER_DESC=Zadajte počet a mená hráčov
+PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Počet hráčov
+PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Počet kôl
+PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Finále
+PARTY_MODE_TOURNAMENT_ROUNDS_2FINAL=Semifinále
+PARTY_MODE_TOURNAMENT_ROUNDS_4FINAL=Štvrťfinále
+PARTY_MODE_TOURNAMENT_ROUNDS_8FINAL=Osemfinále
 PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Párty pre hráčov
-;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
-;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
+PARTY_MODE_TOURNAMENT_WIN_DESC=Výsledok kola
+PARTY_MODE_TOURNAMENT_CHAMPION=Šampiónom sa stáva: %0:s!
 
-MSG_END_JUKEBOX=Chcete ukonžiť režim Jukeboxu?
+MSG_END_JUKEBOX=Chcete ukončiť režim Jukeboxu?
 JUKEBOX_RANDOM=Náhodne
 JUKEBOX_REPEAT=Opakovať
 JUKEBOX_FIND=Hľadať:
 JUKEBOX_SORT=Triedenie:
 JUKEBOX_SONGLIST=Zoznam skladieb
 
-;TODO: PARTY_PLAYLIST_MANUAL=Manual selection
-;TODO: PARTY_MODE_JUKEBOX_NO_SONGS=Playlist is empty!
+PARTY_PLAYLIST_MANUAL=Manuálny výber
+PARTY_MODE_JUKEBOX_NO_SONGS=Playlist je prázdny!
 
-;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
-;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
+WEBSITE_EXIST_SONG=Skladba patrí k webovej stránke: %0:s
+WEBSITE_NOT_EXIST_SONG=Skladba nepatrí ku žiadnej webovej stránke!
 
-;TODO: SING_SONGS_MYSCORES=My scores
+SING_SONGS_MYSCORES=Moje skóre
 
 NAME_PLAYERS_COUNT=Počet hráčov
 NAME_CURRENT_PLAYER=Hráč
 
-;TODO: JUKEBOX_MODE=Jukebox mode
+JUKEBOX_MODE=Režim jukebox
 
 ABOUT_MAIN=O...
 ABOUT_USWP_DEVELOPEDBY=Vyvinutý
-;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
-;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
-;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
-;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
-ABOUT_OVERVIEW=Objavte nový spôsob spevu, sám, v páre alebo s priateľmi.\nZábava je zaručená.\n\nWorldParty je odnož pôvodnej verzie Ultrastar Deluxe 1.1 navrhnutý a vyvinutý tímom UltraStar España, počíta s najväčšou karaoke komunitou.\n\n\nTento program je bezplatný (free) a slobodný (libre) pod licenciou GPL. \n\n Navštívte nás pre viac informácií.\n%s
+ABOUT_CHECK_CHECKING=Kontrolujem aktualizácie...
+ABOUT_CHECK_AVAILABLE=Je dostupná nová verzia
+ABOUT_CHECK_UPTODATE=Používate najnovšiu verziu WorldParty
+ABOUT_CHECK_CONNECTION=Nie je dostupné pripojenie k internetu
+ABOUT_OVERVIEW=Objavte nový spôsob spevu, sám, v páre alebo s priateľmi.\nZábava je zaručená.\n\nWorldParty je odnož pôvodnej verzie Ultrastar Deluxe 1.1 navrhnutý a vyvinutý tímom UltraStar España, opiera sa o najväčšiu komunitou karaoke.\n\n\nTento program je bezplatný (free) a slobodný (libre) pod licenciou GPL. \n\n Navštívte nás pre viac informácií.\n%s
 
 DEVELOPERS_TITLE=Vyvinutý
 DEVELOPERS_OVERVIEW=Ľudia, ktorí prispeli k tomuto projektu:\n\n\n%s\n\n\n Navštívte nás pre viac informácií.\n%s
@@ -559,25 +559,25 @@ ERROR_NO_SONGS=Žiadna skladba
 ERROR_NO_PLUGINS=Žiaden zásuvný modul
 ERROR_LOADING_SONGS=Počkajte na načítanie všetkých skladieb
 ERROR_CORRUPT_SONG=Skladbu sa nepodarilo nahrať.
-;TODO: ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Song could not be loaded: File not found
-;TODO: ERROR_CORRUPT_SONG_NO_NOTES=Song could not be loaded: Can''t find any notes
-;TODO: ERROR_CORRUPT_SONG_NO_BREAKS=Song could not be loaded: Can''t find any linebreaks
-;TODO: ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Hráč %d má priradených viac mikrofónov. Skontrolujte možnosti mikrofónu
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Hráč %d nemá priradený mikrofón. Skontrolujte možnosti mikrofónu
+ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Skladbu sa nepodarilo nahrať: Súbor nebol nájdený
+ERROR_CORRUPT_SONG_NO_NOTES=Skladbu sa nepodarilo nahrať: Nenašli sa žiadne noty
+ERROR_CORRUPT_SONG_NO_BREAKS=Skladbu sa nepodarilo nahrať: Nenašli sa žiadne konce riadkov
+ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Skladbu sa nepodarilo nahrať: Chyba spracovania riadku %0:d
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Hráč %d má priradených viac mikrofónov. Skontrolujte nastavenia mikrofónu
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Hráč %d nemá priradený mikrofón. Skontrolujte nastavenia mikrofónu
 
 ;COMMON TRANSLATIONS:
 
-;TODO: C_ABOUT=About...
-C_ADVANCED=Iné
-;TODO: C_ALL=All
-;TODO: C_APPLY_CHANGES=Apply changes
+C_ABOUT=O programe...
+C_ADVANCED=Pokročilé
+C_ALL=Všetko
+C_APPLY_CHANGES=Použiť zmeny
 
 C_BACK=Späť
-;TODO: C_BOTTOM=Bottom
+C_BOTTOM=Spodok
 
-;TODO: C_CLASSIC=Classic
-;TODO: C_CHALLENGE=Challenge
+C_CLASSIC=Klasický
+C_CHALLENGE=Výzva
 C_COLOR_BEIGE=Béžová
 C_COLOR_BLACK=Čierna
 C_COLOR_BLUE=Modrá
@@ -595,7 +595,7 @@ C_COLOR_LAVENDER=Levanduľová
 C_COLOR_MAGENTA=Purpurová
 C_COLOR_ORANGE=Oranžová
 C_COLOR_ORCHID=Orchidea
-;TODO: C_COLOR_OTHER=Other
+C_COLOR_OTHER=Ďalšie
 C_COLOR_PINK=Ružová
 C_COLOR_PLUM=Slivková
 C_COLOR_RED=Červená
@@ -607,76 +607,76 @@ C_COLOR_TURQUOISE=Tyrkysová
 C_COLOR_VIOLET=Fialová
 C_COLOR_WHITE=Biela
 C_COLOR_YELLOW=Žltá
-;TODO: C_CONTINUE=Continue
-;TODO: C_CREATEDBY=Created by
+C_CONTINUE=Pokračovať
+C_CREATEDBY=Vytvoril(a)
 
-;TODO: C_DUET=Duet
-;TODO: C_DUETS=Duets
+C_DUET=Duet
+C_DUETS=Duety
 
-;TODO: C_ERROR=Error
+C_ERROR=Chyba
 
-;TODO: C_FIND=Find
-;TODO: C_FIXEDBY=Fixed by
-;TODO: C_FOLDERS=Folders
+C_FIND=Nájsť
+C_FIXEDBY=Opravil(a)
+C_FOLDERS=Priečinky
 
 C_GAME=Hra
 C_GRAPHICS=Grafika
 
-;TODO: C_INFORMATION=Information
+C_INFORMATION=Informácie
 C_INTERNET=Internet
 
-;TODO: C_JOKER=Joker
-;TODO: C_JUKEBOX=Jukebox
+C_JOKER=Žolík
+C_JUKEBOX=Jukebox
 
-;TODO: C_LEGEND=Legend
-;TODO: C_LINE=Line
+C_LEGEND=Legenda
+C_LINE=Riadok
 C_LYRICS=Text
 
-;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley calcultated
+C_MEDLEY=Všehochuť
+C_MEDLEYC=Všehochuť vypočítaná
 C_MICROPHONES=Mikrofón
-;TODO: C_MODE=Mode
+C_MODE=Režim
 
-;TODO: C_NEXT=Next
-;TODO: C_NO=No
-;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+C_NEXT=Ďalej
+C_NO=Nie
+C_NO_INTERNET_CONNECTION=Nie je dostupné pripojenie k internetu
 
-;TODO: C_OPEN_PLAYLIST=Open playlist
-;TODO: C_OPTIONS=Options
+C_OPEN_PLAYLIST=Otvoriť playlist
+C_OPTIONS=Možnosti
 
-;TODO: C_PLAYERS=Players
-;TODO: C_PLAYLIST=Playlist
-;TODO: C_PROFILES=Profiles
+C_PLAYERS=Hráči
+C_PLAYLIST=Playlist
+C_PROFILES=Profily
 
-;TODO: C_QUIT=Quit
+C_QUIT=Ukončiť
 
-;TODO: C_RANDOM=Random
-;TODO: C_RAP=Rap
-;TODO: C_REFRESH_SCORES=Refresh scores
-;TODO: C_REPEAT=Repeat
+C_RANDOM=Náhodné
+C_RAP=Rap
+C_REFRESH_SCORES=Aktualizovať skóre
+C_REPEAT=Opakovať
 
-;TODO: C_SAVE=Save
-;TODO: C_SEARCH_NEW_SONGS=Search for new songs
-;TODO: C_SELECT_THIS_SONG=Select this song
-;TODO: C_SEND=Send
-;TODO: C_SING=Sing
-;TODO: C_SING_MEDLEY=Sing medley
-;TODO: C_SONG=Song
-;TODO: C_SONGS=Songs
-;TODO: C_SORT=Sort
-;TODO: C_SORT_SONGS=Sort songs
+C_SAVE=Uložiť
+C_SEARCH_NEW_SONGS=Hľadať nové skladby
+C_SELECT_THIS_SONG=Vybrať túto skladbu
+C_SEND=Odoslať
+C_SING=Spievať
+C_SING_MEDLEY=Spievať všehochuť
+C_SONG=Skladba
+C_SONGS=Skladby
+C_SORT=Triediť
+C_SORT_SONGS=Triediť skladby
 C_SOUND=Zvuk
-;TODO: C_STATISTICS=Statistics
-;TODO: C_STATS=Stats
+C_STATISTICS=Štatistiky
+C_STATS=Štatistiky
 
-;TODO: C_THEME=Theme
-C_THEMES=Témy
-;TODO: C_TOP=Top
+C_THEME=Motív
+C_THEMES=Motívy
+C_TOP=Najlepšie
 
-;TODO: C_UNVALIDATED=Unvalidated
+C_UNVALIDATED=Neskontrolované
 
-;TODO: C_VIDEO=Video
+C_VIDEO=Video
 
 C_WEBCAM=Webová kamera
 
-;TODO: C_YES=Yes
+C_YES=Áno
