extended new themes to options game

--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -49,6 +49,15 @@ SING_OPTIONS_GAME_SORTING=Tri par
 SING_OPTIONS_GAME_SHOWSCORES=Montrer les scores
 SING_OPTIONS_GAME_SINGSCORES=Scores sur le chant
 
+SING_OPTIONS_GAME_LANGUAGE_DESC=Changez la langue du jeu
+SING_OPTIONS_GAME_SONGMENU_DESC=Sélectionnez le mode d'affichage des chansons
+SING_OPTIONS_GAME_DUETS_DESC=Montrer les duos sur les chansons
+SING_OPTIONS_GAME_TABS_DESC=Trier les chansons en dossiers
+SING_OPTIONS_GAME_SORTING_DESC=Trier les chansons par
+SING_OPTIONS_GAME_SHOWSCORES_DESC=Montrer votre score dans l'écran de sélection des chansons
+;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
+SING_OPTIONS_GAME_MEDLEYC_DESC=Détecter automatiquement la version courte de la chanson si elle n'existe pas
+
 OPTION_VALUE_ROULETTE=Roulette
 OPTION_VALUE_CHESSBOARD=Échiquier
 OPTION_VALUE_CAROUSEL=Carrousel
