--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -49,6 +49,15 @@ SING_OPTIONS_GAME_SORTING=Сортировка
 ;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
 ;TODO: SING_OPTIONS_GAME_SINGSCORES=Scores on singing
 
+;TODO: SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
+;TODO: SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
+;TODO: SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
+;TODO: SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
+;TODO: SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
+;TODO: SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
+;TODO: SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
+;TODO: SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+
 OPTION_VALUE_ROULETTE=рулетка
 OPTION_VALUE_CHESSBOARD=шахматная доска
 OPTION_VALUE_CAROUSEL=Карусель
