--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -49,6 +49,15 @@ SING_OPTIONS_GAME_SORTING=Sorting
 SING_OPTIONS_GAME_SHOWSCORES=Show scores
 SING_OPTIONS_GAME_SINGSCORES=Scores on singing
 
+SING_OPTIONS_GAME_LANGUAGE_DESC=Change the language of the game
+SING_OPTIONS_GAME_SONGMENU_DESC=Select the mode to show the songs
+SING_OPTIONS_GAME_DUETS_DESC=Show duets on songs
+SING_OPTIONS_GAME_TABS_DESC=Sort songs in folders
+SING_OPTIONS_GAME_SORTING_DESC=Sort songs by
+SING_OPTIONS_GAME_SHOWSCORES_DESC=Show your score in song selection screen
+SING_OPTIONS_GAME_SINGSCORES_DESC=Show a score box in sing screen
+SING_OPTIONS_GAME_MEDLEYC_DESC=Detect the song medley automatically if doesn't exist
+
 OPTION_VALUE_ROULETTE=Roulette
 OPTION_VALUE_CHESSBOARD=Chessboard
 OPTION_VALUE_CAROUSEL=Carousel
