--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -49,6 +49,15 @@ SING_OPTIONS_GAME_SORTING=Clasificar por
 SING_OPTIONS_GAME_SHOWSCORES=Mostrar puntuación
 SING_OPTIONS_GAME_SINGSCORES=Marcador al cantar
 
+SING_OPTIONS_GAME_LANGUAGE_DESC=Cambia el idioma del juego
+SING_OPTIONS_GAME_SONGMENU_DESC=Selecciona el modo de mostrar las canciones
+SING_OPTIONS_GAME_DUETS_DESC=Mostrar duetos en las canciones
+SING_OPTIONS_GAME_TABS_DESC=Clasificar canciones por carpetas
+SING_OPTIONS_GAME_SORTING_DESC=Ordenar canciones por
+SING_OPTIONS_GAME_SHOWSCORES_DESC=Muestra tu puntuación en la pantalla de selección de canciones
+SING_OPTIONS_GAME_SINGSCORES_DESC=Muestra un marcador en la pantalla canta
+SING_OPTIONS_GAME_MEDLEYC_DESC=Detectar versión corta de la canción automáticamente si no existe
+
 OPTION_VALUE_ROULETTE=Ruleta
 OPTION_VALUE_CHESSBOARD=Ajedrez
 OPTION_VALUE_CAROUSEL=Diapositiva
