extended themes to graphics options

--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -88,6 +88,13 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Laulmise efektid
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualiseerimine
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Filmi suurus
 
+;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode 
+;TODO: SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
+;TODO: SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Replace video with visual effects
+;TODO: SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Select video size
+
 OPTION_VALUE_BORDERLESS=Raamideta
 
 OPTION_VALUE_WHENNOVIDEO=Kui pole videot
