--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -88,6 +88,13 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Sing effects
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualization
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Movie size
 
+SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode 
+SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
+SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
+SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
+SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Replace video with visual effects
+SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Select video size
+
 OPTION_VALUE_BORDERLESS=Borderless
 
 OPTION_VALUE_WHENNOVIDEO=When No Video
