--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -88,6 +88,13 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Efectos al cantar
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualización
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Tamaño del video
 
+SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Alternar entre pantalla completa o modo ventana 
+SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Cambiar el tamaño de la ventana
+SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Añadir efectos de desvanecimiento al cambiar de menú
+SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Añadir efectos al cantar en notas doradas
+SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Sustituir video con efectos visuales
+SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Selecciona el tamaño del video
+
 OPTION_VALUE_BORDERLESS=Maximizada
 
 OPTION_VALUE_WHENNOVIDEO=Si no hay video
