--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -88,6 +88,13 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Effet de chant
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualisation
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Taille vidéo
 
+;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode 
+;TODO: SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
+;TODO: SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Replace video with visual effects
+;TODO: SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Select video size
+
 OPTION_VALUE_BORDERLESS=Plein écran fenêtré
 
 OPTION_VALUE_WHENNOVIDEO=Si pas de vidéo
