--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -88,6 +88,13 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Effetti del canto
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualizzazioni
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Dimensioni video
 
+;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode 
+;TODO: SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
+;TODO: SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Replace video with visual effects
+;TODO: SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Select video size
+
 OPTION_VALUE_BORDERLESS=Senza bordi
 
 OPTION_VALUE_WHENNOVIDEO=Quando non c'è video
