--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -88,6 +88,13 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Ének effektek
 SING_OPTIONS_GRAPHICS_VISUALIZER=Megjelenítés
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Videó mérete
 
+;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode 
+;TODO: SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
+;TODO: SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Replace video with visual effects
+;TODO: SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Select video size
+
 OPTION_VALUE_BORDERLESS=Maximalizált
 
 OPTION_VALUE_WHENNOVIDEO=Ha nincs videó
