--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -88,6 +88,13 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Efekty pri speve
 SING_OPTIONS_GRAPHICS_VISUALIZER=Vizualizácia
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Zobrazenie videa
 
+;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode 
+;TODO: SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
+;TODO: SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Replace video with visual effects
+;TODO: SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Select video size
+
 OPTION_VALUE_BORDERLESS=Maximalizované
 
 OPTION_VALUE_WHENNOVIDEO=Keď nie je video
