--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -88,6 +88,13 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=Söngbrellur
 SING_OPTIONS_GRAPHICS_VISUALIZER=Sýning
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Stærð Myndbands
 
+;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode 
+;TODO: SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
+;TODO: SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Replace video with visual effects
+;TODO: SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Select video size
+
 OPTION_VALUE_BORDERLESS=Landamæralaus
 
 OPTION_VALUE_WHENNOVIDEO=Þegar ekkert myndband
