--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -88,6 +88,13 @@ SING_OPTIONS_GRAPHICS_EFFECTSING=演唱效果
 SING_OPTIONS_GRAPHICS_VISUALIZER=可视化
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=影片大小
 
+;TODO: SING_OPTIONS_GRAPHICS_FULLSCREEN_DESC=Toggle between full screen or windows mode 
+;TODO: SING_OPTIONS_GRAPHICS_RESOLUTION_DESC=Change window size
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE_DESC=Add fading effects when changing menus
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING_DESC=Add sing effects in golden notes
+;TODO: SING_OPTIONS_GRAPHICS_VISUALIZER_DESC=Replace video with visual effects
+;TODO: SING_OPTIONS_GRAPHICS_MOVIE_SIZE_DESC=Select video size
+
 ;TODO: OPTION_VALUE_BORDERLESS=Borderless
 
 OPTION_VALUE_WHENNOVIDEO=无视频时
