extended themes to sound options

--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -112,6 +112,14 @@ SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Preview volume
 SING_OPTIONS_SOUND_PREVIEWFADING=Preview fading
 
+SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Listen to your voice
+SING_OPTIONS_SOUND_BACKGROUNDMUSIC_DESC=Listen to the background music
+SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Listen to click on each note
+SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Listen to tempo click
+SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Normalize songs volume
+SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC=Adjust volume in song selection
+SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Fade out audio when changing songs
+
 OPTION_VALUE_GAIN_SOFT=Soft
 OPTION_VALUE_GAIN_MEDIUM=Medium
 OPTION_VALUE_GAIN_HARD=Hard
