--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -112,6 +112,14 @@ SING_OPTIONS_SOUND_MUSICAUTOGAIN=Ganancia
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Volumen vista previa
 SING_OPTIONS_SOUND_PREVIEWFADING=Desvanecer audio
 
+SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Escuchar tu voz
+SING_OPTIONS_SOUND_BACKGROUNDMUSIC_DESC=Escuchar la música de fondo
+SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Escuchar clic en cada nota
+SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Escuchar el clic del tempo
+SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Normalizar el volumen de las canciones
+SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC=Ajustar el volumen en selección de canción
+SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Desvanecer sonido al cambiar de canción
+
 OPTION_VALUE_GAIN_SOFT=Poca
 OPTION_VALUE_GAIN_MEDIUM=Media
 OPTION_VALUE_GAIN_HARD=Mucha
