--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -112,6 +112,14 @@ SING_OPTIONS_SOUND_MUSICAUTOGAIN=Hudobný zisk
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Náhľad (hlasitosť)
 SING_OPTIONS_SOUND_PREVIEWFADING=Prechod skladieb
 
+;TODO: SING_OPTIONS_SOUND_VOICEPASSTHROUGH_DESC=Listen to your voice
+;TODO: SING_OPTIONS_SOUND_BACKGROUNDMUSIC_DESC=Listen to the background music
+;TODO: SING_OPTIONS_SOUND_CLICK_ASSIST_DESC=Listen to click on each note
+;TODO: SING_OPTIONS_SOUND_BEAT_CLICK_DESC=Listen to tempo click
+;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN_DESC=Normalize songs volume
+;TODO: SING_OPTIONS_SOUND_PREVIEWVOLUME_DESC=Adjust volume in song selection
+;TODO: SING_OPTIONS_SOUND_PREVIEWFADING_DESC=Fade out audio when changing songs
+
 OPTION_VALUE_GAIN_SOFT=Jemný
 OPTION_VALUE_GAIN_MEDIUM=Stredný
 OPTION_VALUE_GAIN_HARD=Silný
